# WebSrv

./: CMakeLists.txt  README.md  WebSrv.cpp  WebSrv.h  web.cpp
.github/workflows/: CMakeBuildTest.yml
scripts/: build.bat  build.sh
